--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -276,7 +276,8 @@ jobs:
       matrix:
         dmd:
           - 'root'
-          - 'gb'
+          # TODO: Re-enable gb once you fix the bugs stopping this from working.
+          # - 'gb'
           # - 'ru'
           # - 'ru-moscow'
     steps:
@@ -297,6 +298,37 @@ jobs:
             --profile=${{ matrix.dmd }} \
             -t
 
-  # TODO: Create Test DIT
   # TODO: Test
   # TODO: Publish Docusaurus Docs
+
+  # Pretty much copied from here: https://docusaurus.io/docs/deployment#deploying-to-github-pages
+  deploy-docs:
+    name: Deploy Documentation
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+      - name: Install NPM Packages
+        run: npm ci
+      - name: Compile Documentation
+        run: npx nx run meerkat-docs:build:production --skip-nx-cache
+
+      # Popular action to deploy to GitHub Pages:
+      # Docs: https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-docusaurus
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          # Build output to publish to the `gh-pages` branch:
+          publish_dir: ./dist/apps/meerkat-docs
+          # The following lines assign commit authorship to the official
+          # GH-Actions bot for deploys to `gh-pages` branch:
+          # https://github.com/actions/checkout/issues/13#issuecomment-724415212
+          # The GH actions bot is used by default if you didn't specify the two fields.
+          # You can swap them out with your own user credentials.
+          user_name: github-actions[bot]
+          user_email: 41898282+github-actions[bot]@users.noreply.github.com
