Maybe fix PWA issues with Docusaurus

--- a/apps/meerkat-docs/static/manifest.json
+++ b/apps/meerkat-docs/static/manifest.json
@@ -26,7 +26,7 @@
     "start_url": "/directory/?source=pwa",
     "background_color": "#000000",
     "display": "standalone",
-    "scope": "/",
+    "scope": "/directory/",
     "theme_color": "#F44336",
     "shortcuts": [],
     "screenshots": []
