--- a/.editorconfig
+++ b/.editorconfig
@@ -21,6 +21,7 @@ end_of_line = lf
 [*.{yml,yaml,md,prisma}]
 indent_size = 2
 indent_style = space
+end_of_line = unset
 
 [*.pem]
 end_of_line = unset
